[tool.poetry]
name = "pyrcdevs"
version = "0.1.1"
description = "Python library for using the RCDevs API (Manager and SOAP APIs)"
authors = ["Benoît Jager <benoit.jager@rcdevs.com>"]
readme = "README.md"
#homepage = "https://www.rcdevs.com/"
documentation = "https://docs.rcdevs.com/"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"
requests-pkcs12 = "^1.25"
xmltodict = "^0.14.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-env = "^1.1.5"
coverage = "^7.6"
tox = "^4.23.2"
virtualenv-pyenv = "^0.5.0"
python-ldap = "^3.4.4"

[tool.poetry.group.dev.dependencies]
black = "^24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = [
    "tests",
]
env = [
    "WEBADM_HOST = pyrcdevs.testing.local",
    "WEBADM_ADMIN_DN = cn=admin,o=root",
    "WEBADM_ADMIN_PASSWORD = password",
    "WEBADM_API_USERNAME = Default\\admin",
    "WEBADM_API_PASSWORD = password",
    "WEBADM_BASE_DN = ou=pyrcdevs,o=root",
    "WEBADM_API_KEY = 5860687476061196336_d788fd99ea4868f35c3b5e21ada3920b9501bb2c",
    "SMS_MOBILE = ",
    "OPENOTP_TOKENKEY = 7aHeuw06X1wu53rZAw2RJerTKcc=",
    "OPENOTP_PUSHID = QU5EOmQ2TlRjN2NPUWUtQWdNMU9kUjM4VkE6QVBBOTFiRURpYWxBd2RsdU50aXNHN1NrcDgxR3ZhZkp2S1VlWVpmOTVtMG9Xd1lkODJDdE5DdkJ6M1ZCRFE0R2xKdjF2ZU0xeUxjWlFmRndNNE9sZ2JrV2JHVkg5SWNNaGpzOUhQQTdBeWNRVk9tMFE1dkpmZDU0RXZhck83dGFaZnotMHF4Uk5lOWc=",
]
filterwarnings = [
    "error",
    "ignore::urllib3.exceptions.InsecureRequestWarning",
]


[tool.tox]
legacy_tox_ini = """
[tox]
env_list =
    py38, py39, py310, py311, py312, py313

[testenv]
description = run the tests with pytest
commands =
    pytest {posargs:tests}
set_env =
  VIRTUALENV_DISCOVERY = pyenv
  PYTHONPATH = ./tests:.
deps =
    pytest
    pytest-env
    coverage
    virtualenv-pyenv
    python-ldap
    xmltodict
"""