[tool.poetry]
name = "pyrcdevs"
version = "0.1.1"
description = "Python library for using the RCDevs API (Manager and SOAP APIs)"
authors = ["Benoît Jager <benoit.jager@rcdevs.com>"]
readme = "README.md"
#homepage = "https://www.rcdevs.com/"
documentation = "https://docs.rcdevs.com/"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"
requests-pkcs12 = "^1.25"
xmltodict = "^0.14.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-env = "^1.1.5"
coverage = "^7.6"
tox = "^4.23.2"
virtualenv-pyenv = "^0.5.0"
python-ldap = "^3.4.4"

[tool.poetry.group.dev.dependencies]
black = "^24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = [
    "tests",
]
env = [
    "WEBADM_HOST = ",
    "WEBADM_ADMIN_DN = ",
    "WEBADM_ADMIN_PASSWORD = ",
    "WEBADM_API_USERNAME = ",
    "WEBADM_API_PASSWORD = ",
    "WEBADM_BASE_DN = ",
    "OPENOTP_API_KEY = ",
    "SMSHUB_API_KEY = ",
    "SPANKEY_API_KEY = ",
    "LDAP_HOST = ",
    "LDAP_USERNAME = ",
    "LDAP_PASSWORD = ",
    "LDAP_BASE_DN = ",
    "SMS_MOBILE = ",
    "GROUP_OBJECTCLASS = group",
    "CLUSTER_TYPE = ",
    "DEFAULT_PASSWORD = ",
    "OPENOTP_TOKENKEY = ",
    "OPENOTP_PUSHID = ",
]
filterwarnings = [
    "error",
    "ignore::urllib3.exceptions.InsecureRequestWarning",
]


[tool.tox]
legacy_tox_ini = """
[tox]
env_list =
    py38, py39, py310, py311, py312, py313

[testenv]
description = run the tests with pytest
commands =
    pytest {posargs:tests}
set_env =
  VIRTUALENV_DISCOVERY = pyenv
  PYTHONPATH = ./tests:.
deps =
    pytest
    pytest-env
    coverage
    virtualenv-pyenv
    python-ldap
    xmltodict
"""